syntax = "proto3";
option go_package = "proto/GetIndex";
package go.micro.srv.GetIndex;

service GetIndex {
	rpc GetIndex(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {

}

message Response {
	string errno = 1;
	string errmsg = 2;
	bytes Max = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
